Rewritten core Showdown logic
Does not have Sidebar/Bossbar implementations yet